syntax = "proto3";
package playlist;

import "google/protobuf/empty.proto";
import "track.proto";

option go_package = "./pb";

service PlaylistService {
  rpc ListAllAlbums(google.protobuf.Empty) returns (PlaylistList) {}
}

message Playlist {
  int32 id = 1;

  string name = 2;
  string description = 3;
  PlaylistType type = 4;

  repeated track.Track tracks = 5;

  string albumArtist = 6;
}

enum PlaylistType {
  CUSTOM = 0;
  ALBUM = 1;
  ARTIST = 2;
}

message PlaylistList {
  repeated Playlist playlists = 1;
}
